examples/test/testpolicy6534.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6534
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key29: value40
      key38: value44
      key5: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value6
          key31: value15
      podSelector:
        matchLabels:
          key36: value1
